# wgpu

./: .deny.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  renovate.json  typos.toml
.config/: nextest.toml
.github/workflows/: changelog.yml  ci.yml  cts.yml  docs.yml  generate.yml  lazy.yml  publish.yml  shaders.yml
benches/: Cargo.toml
cts_runner/: Cargo.toml  fail.lst  revision.txt  skip.lst  test.lst
cts_runner/src/: bootstrap.js  main.rs
cts_runner/tests/: integration.rs
deno_webgpu/: 01_webgpu.js  Cargo.toml  adapter.rs  bind_group.rs  bind_group_layout.rs  buffer.rs  byow.rs  command_buffer.rs  command_encoder.rs  compute_pass.rs  device.rs  error.rs  lib.rs  query_set.rs  queue.rs  render_bundle.rs  render_pass.rs  render_pipeline.rs  sampler.rs  shader.rs  surface.rs  texture.rs  webidl.rs
docs/: broadcast_license.nu  release-checklist.md  testing.md
docs/api-specs/: mesh_shading.md  ray_tracing.md
examples/: README.md
examples/features/: Cargo.toml
examples/standalone/03_hdr_surface/: Cargo.toml
examples/standalone/03_hdr_surface/src/: main.rs
lock-analyzer/: Cargo.toml
naga/: Cargo.toml  build.rs
naga-cli/: Cargo.toml
naga-test/: Cargo.toml
naga-test/src/: lib.rs
naga-types/: Cargo.toml
naga-types/src/: lib.rs
naga/fuzz/: Cargo.toml  (+1 more)
player/: Cargo.toml
tests/: Cargo.toml
wgpu/: Cargo.toml  build.rs
wgpu-core/: Cargo.toml  build.rs
wgpu-hal/: Cargo.toml  build.rs
wgpu-info/: Cargo.toml
wgpu-macros/: Cargo.toml
wgpu-naga-bridge/: Cargo.toml
wgpu-types/: Cargo.toml
(+396 files in other folders)
