[package]
name = "wgpu-example-03-hdr-surface"
edition = "2021"
rust-version = "1.87"
publish = false

[dependencies]
wgpu = "29.0.0"
winit = { version = "0.30.8", features = ["android-native-activity"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.5"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Location",
    "Window",
] }
